# ChangeLog for dev-python/python-docs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-docs/ChangeLog,v 1.188 2014/01/15 12:34:01 ago Exp $

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for ia64, wrt bug #474128

*python-docs-3.3.3 (11 Jan 2014)

  11 Jan 2014; Mike Gilbert <floppym@gentoo.org> +python-docs-3.3.3.ebuild:
  Bump.

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for ppc64, wrt bug #474128

  05 Jan 2014; Agostino Sarubbo <ago@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for ppc, wrt bug #474128

  26 Dec 2013; Markus Meier <maekke@gentoo.org> python-docs-3.3.2.ebuild:
  arm stable, bug #474128

  15 Dec 2013; Agostino Sarubbo <ago@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for sparc, wrt bug #474128

  13 Dec 2013; Matt Turner <mattst88@gentoo.org> python-docs-3.3.2.ebuild:
  alpha stable, bug 474128.

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> python-docs-3.3.2.ebuild:
  x86 stable, bug #474128

  30 Nov 2013; Jeroen Roovers <jer@gentoo.org> python-docs-3.3.2.ebuild:
  Stable for HPPA (bug #474128).

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> python-docs-3.3.2.ebuild:
  amd64 stable, bug #474128

  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> python-docs-2.7.5.ebuild,
  python-docs-3.2.5.ebuild, python-docs-3.3.2.ebuild:
  Marked ~x64-macos, bug #487670

*python-docs-3.3.2 (25 Jun 2013)
*python-docs-2.7.5 (25 Jun 2013)
*python-docs-3.2.5 (25 Jun 2013)

  25 Jun 2013; Mike Gilbert <floppym@gentoo.org> +python-docs-2.7.5.ebuild,
  +python-docs-3.2.5.ebuild, +python-docs-3.3.2.ebuild:
  Bump.

  09 May 2013; Mike Gilbert <floppym@gentoo.org> python-docs-3.3.1.ebuild:
  Remove pkg_setup.

*python-docs-2.7.4 (09 May 2013)
*python-docs-3.3.1 (09 May 2013)
*python-docs-3.2.4 (09 May 2013)

  09 May 2013; Mike Gilbert <floppym@gentoo.org> +python-docs-2.7.4.ebuild,